@startuml AppClassDiagram
skinparam classAttributeIconSize 0
skinparam style strictuml

class App {
    +App(Ui, Parser, StudentDatabase, Storage)
    +run(): void
}

class Parser {
    +parse(String): Command
}

class StudentDatabase {
    +addStudent(Student): void
    +getStudent(int): Student
    +removeStudent(int): Student
    +getStudentCount(): int
    +getAllStudents(): List<Student>
}

class Ui {
    +readCommand(): String
    +show(String): void
    +line(): void
}

class Storage {
    +saveStudentList(StudentDatabase): void
    +loadStudentList(): List<Student>
}

class CommandHistory {
    +push(Command): void
    +pop(): Command
}

interface Command {
    +execute(StudentDatabase, Storage): CommandResult
    +undo(StudentDatabase, Storage): CommandResult
    +isUndoable(): boolean
}

class CommandResult {
    -message: String
    -exit: boolean
    +CommandResult(String, boolean)
    +getMessage(): String
    +shouldExit(): boolean
}

App --> "1" Parser : uses
App --> "1" StudentDatabase : uses
App --> "1" Ui : uses
App --> "1" Storage : uses
App --> "1" CommandHistory : uses
App ..> Command : calls execute()
App ..> CommandResult : reads
Parser ..> Command : creates
@enduml
